--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   
   <!--fontawesome icons-->
-  <!-- <link rel="stylesheet" type="text/css" href="fontawesome-free-5.7.2-web 2/css/all.css"> -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   
   <!--google fonts-->
@@ -206,10 +205,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="fab fa-twitter social-icon"></i>
-    <i class="fab fa-facebook social-icon"></i>
-    <i class="fab fa-instagram social-icon"></i>
-    <i class="fas fa-envelope social-icon"></i>
+    <i class="fab fa-twitter social-icon fa-2x"></i>
+    <i class="fab fa-facebook social-icon fa-2x"></i>
+    <i class="fab fa-instagram social-icon fa-2x"></i>
+    <i class="fas fa-envelope social-icon fa-2x"></i>
     <p class="footer-text">© Copyright 2020 TinDog</p>
 
   </footer>
